dlpdepot/utility/prometheus-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
  name: prometheus-service
  namespace: monitoring
spec:
  ports:
  - nodePort: 30000
    port: 8080
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-server
  type: NodePort
